# minirtos

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
src/apps/: gpio_irq.rs  mod.rs  net_test.rs  shell.rs  test_apps.rs  wlan.rs
src/apps/hmi/: mod.rs  ui.rs
src/apps/shell/: device.rs  i2c.rs  keyboard.rs  memory.rs  mod.rs  ping.rs  task.rs  touch.rs  wifi.rs
src/bsp/: mod.rs
src/bsp/boards/: mod.rs  pico2w.rs
src/drivers/: dma.rs  mod.rs
src/drivers/gpio/: mod.rs  rp235x_gpio.rs
src/drivers/i2c/: mod.rs  rp235x_i2c.rs
src/drivers/input/: gt911.rs  mod.rs  picocalc_kb.rs  ws114_gpio_kb.rs
src/drivers/lcd/: ili9488.rs  mod.rs  st7789vw.rs  st7796su1.rs
src/drivers/spi/: mod.rs  rp235x_pl022_spi.rs
src/drivers/uart/: mod.rs  rp235x_pl011_uart.rs
src/drivers/wlan/: mod.rs
src/gui/: container.rs  desktop.rs  display.rs  draw.rs  drawable_element.rs  event.rs  mod.rs  theme.rs  widget.rs
src/gui/display/: framebuffer.rs  mod.rs
src/gui/icons/: mod.rs
src/gui/input/: input_manager.rs  mod.rs
src/gui/theme/: mod.rs  palettes.rs
src/gui/widgets/: desktop_icon.rs  icon.rs  label.rs  menu_bar.rs  (+1 more)
src/net/: ethernet.rs  fake_device.rs  iface.rs  mod.rs  packet.rs  smol_device.rs  sockets.rs
src/serivices/: mod.rs  wlan_service.rs
src/services/: mod.rs  touce_service.rs  wlan_service.rs
src/sys/: board.rs  console.rs  cpu.rs  debug_info.rs  device_driver.rs  driver_manager.rs  input.rs  interrupt.rs  memory.rs  mod.rs  print.rs  scheduler.rs  synchronization.rs  syscall.rs  task.rs
(+34 files in other folders)
